Fix incorrectly truncated addon descriptions

--- a/webpages/styles/components/addon.css
+++ b/webpages/styles/components/addon.css
@@ -1,7 +1,7 @@
 .addon-description {
-  margin-inline-start: 10px;
+  margin-inline: 10px;
   color: gray;
-  width: 35vw;
+  max-width: 35vw;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
